Wrong specificity of :has() pseudo-classes https://bugs.webkit.org/show_bug.cgi?id=242328

Reviewed by Simon Fraser.

* LayoutTests/imported/w3c/web-platform-tests/css/selectors/has-specificity-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/selectors/has-specificity.html:
* Source/WebCore/css/CSSSelector.cpp:
(WebCore::simpleSelectorSpecificityInternal):

We insert a fake scope pseudo-class to the relative :has() argument and that ends up incrementing the specificity
as if it was a real pseudo-class. Fix by making its specificity 0.

Canonical link: https://commits.webkit.org/252140@main